package at.spengergasse.springtest.domain;

public enum Role {
    ADMIN,
    USER,
    GUEST
}
